@@ -72,6 +72,8 @@ src/encodings.h -text
 src/eqslider.cpp -text
 src/eqslider.h -text
 src/eqslider.ui -text
+src/extensions.cpp -text
+src/extensions.h -text
 src/filedialog.cpp -text
 src/filedialog.h -text
 src/filepropertiesdialog.cpp -text
